# ComposeMediaPlayer

./: .gitmodules  LICENSE  README.MD  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish-documentation-and-sample.yml  publish-on-maven-central.yml
assets/subtitles/: en.vtt  fr.vtt
gradle/: libs.versions.toml
gstreamer-windows/: build.gradle.kts
gstreamer-windows/src/jvmMain/kotlin/: sample.kt
javafx-mediaplayer/: build.gradle.kts
javafx-mediaplayer/src/jvmMain/kotlin/io/github/kdroidfilter/composemediaplayer/: WindowsVideoPlayerState.kt  WindowsVideoPlayerSurface.kt  sample.kt
mediaplayer/: build.gradle.kts
mediaplayer/src/androidMain/kotlin/io/github/kdroidfilter/composemediaplayer/: AudioLevelProcessor.kt  VideoPlayerState.android.kt  VideoPlayerSurface.android.kt
mediaplayer/src/jvmMain/kotlin/io/github/kdroidfilter/composemediaplayer/windows/mfplayer2/native/: CMakeLists.txt  library.cpp  library.h
mediaplayer/src/jvmMain/resources/darwin-aarch64/: libNativeVideoPlayer.dylib
mediaplayer/src/jvmMain/resources/darwin-x86-64/: libNativeVideoPlayer.dylib
sample/composeApp/: build.gradle.kts
sample/composeApp/src/androidMain/: AndroidManifest.xml
sample/composeApp/src/androidMain/kotlin/sample/app/: App.android.kt  main.kt
sample/composeApp/src/commonMain/kotlin/sample/app/: App.kt
sample/composeApp/src/jvmMain/kotlin/sample/app/: App.jvm.kt  main.kt
sample/composeApp/src/wasmJsMain/kotlin/sample/app/: App.wasmJs.kt  main.kt
sample/composeApp/src/wasmJsMain/resources/: index.html  styles.css
(+97 files in other folders)
